rewrite index generation in python

--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-<html><body><ul>
-<li><a href="./branches">branches</a></li></ul></ul></body></html>
+
+<!doctype html>
+<head>
+<title>Path: branches</title>
+</head>
+<body>
+<h1>Master</h1>
+<ul><li><a href="pymor-0.5.0rc0+793.g0717040.dirty-cp27-cp27mu-manylinux1_x86_64.whl">pymor-0.5.0rc0+793.g0717040.dirty-cp27-cp27mu-manylinux1_x86_64.whl</a></li>
+</ul>
+<h1>Branches</h1>
+<ul><li><h2>wheel_building</h2>
+        <ul><li><a href="branches/wheel_building/pymor-0.5.0rc0+793.g0717040.dirty-cp27-cp27mu-manylinux1_x86_64.whl">pymor-0.5.0rc0+793.g0717040.dirty-cp27-cp27mu-manylinux1_x86_64.whl</a></li>
+        </ul>
+    </li>
+</ul>
+
+</body>
+</html>
