--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Master</h1>
-<ul><li><a href="pymor-0.5.0rc0+793.g0717040.dirty-cp27-cp27mu-manylinux1_x86_64.whl">pymor-0.5.0rc0+793.g0717040.dirty-cp27-cp27mu-manylinux1_x86_64.whl</a></li>
+<ul><li><a href="pymor-0.5.0rc0+793.g0717040.dirty-cp27-cp27mu-manylinux1_x86_64.whl">pymor-0.5.0rc0+793.g0717040.dirty-cp27-cp27mu-manylinux1_x86_64.whl</a></li><li><a href="pymor-0.5.0rc0+793.g0717040.dirty-cp35-cp35m-manylinux1_x86_64.whl">pymor-0.5.0rc0+793.g0717040.dirty-cp35-cp35m-manylinux1_x86_64.whl</a></li>
 </ul>
 <h1>Branches</h1>
 <ul><li><h2>wheel_building</h2>
