--- a/index.html
+++ b/index.html
@@ -73,98 +73,9 @@ pip install --find-links=https://wheels.pymor.org/branches/wheel_versioning/inde
 
 
 <h1>Branches</h1>
-<ul><li>
-      <a href="branches/0.5.2/index.html">0.5.2</a>
-    </li><li>
-      <a href="branches/0.5.x/index.html">0.5.x</a>
-    </li><li>
-      <a href="branches/05_fix_adaptivegreedy/index.html">05_fix_adaptivegreedy</a>
-    </li><li>
-      <a href="branches/2019.2rc0/index.html">2019.2rc0</a>
-    </li><li>
-      <a href="branches/DBG_deploy_check/index.html">DBG_deploy_check</a>
-    </li><li>
-      <a href="branches/appveyor_rewire/index.html">appveyor_rewire</a>
-    </li><li>
-      <a href="branches/backport_625/index.html">backport_625</a>
-    </li><li>
-      <a href="branches/cleanup/index.html">cleanup</a>
-    </li><li>
-      <a href="branches/disc_to_model/index.html">disc_to_model</a>
-    </li><li>
-      <a href="branches/docopt_0.5.x/index.html">docopt_0.5.x</a>
-    </li><li>
-      <a href="branches/drone.io/index.html">drone.io</a>
-    </li><li>
-      <a href="branches/examples-improvements/index.html">examples-improvements</a>
-    </li><li>
-      <a href="branches/f-string-examples/index.html">f-string-examples</a>
-    </li><li>
-      <a href="branches/fix-564/index.html">fix-564</a>
-    </li><li>
-      <a href="branches/fix-794/index.html">fix-794</a>
-    </li><li>
-      <a href="branches/fix-798/index.html">fix-798</a>
-    </li><li>
-      <a href="branches/fix-arnoldi/index.html">fix-arnoldi</a>
-    </li><li>
-      <a href="branches/fix-flake8-w605/index.html">fix-flake8-w605</a>
-    </li><li>
-      <a href="branches/fix-make-docs-0.5.x/index.html">fix-make-docs-0.5.x</a>
-    </li><li>
-      <a href="branches/fix_demos/index.html">fix_demos</a>
-    </li><li>
-      <a href="branches/fix_residual_current/index.html">fix_residual_current</a>
-    </li><li>
-      <a href="branches/fix_rtd_builds/index.html">fix_rtd_builds</a>
-    </li><li>
-      <a href="branches/fix_tb_gui_demo/index.html">fix_tb_gui_demo</a>
-    </li><li>
-      <a href="branches/fix_tb_gui_demo_0.5.x/index.html">fix_tb_gui_demo_0.5.x</a>
-    </li><li>
-      <a href="branches/fixes-backport/index.html">fixes-backport</a>
-    </li><li>
-      <a href="branches/flake8-ignore-E731-E741/index.html">flake8-ignore-E731-E741</a>
-    </li><li>
-      <a href="branches/flake8-ignore-W503/index.html">flake8-ignore-W503</a>
-    </li><li>
-      <a href="branches/ftalbrecht-patch-1/index.html">ftalbrecht-patch-1</a>
-    </li><li>
-      <a href="branches/gitlab_ci/index.html">gitlab_ci</a>
-    </li><li>
-      <a href="branches/gitlab_ci_2/index.html">gitlab_ci_2</a>
-    </li><li>
-      <a href="branches/gitlab_deploy/index.html">gitlab_deploy</a>
-    </li><li>
-      <a href="branches/gram_schmidt-R/index.html">gram_schmidt-R</a>
-    </li><li>
-      <a href="branches/improved_workerpool/index.html">improved_workerpool</a>
-    </li><li>
-      <a href="branches/increase_min_py_to_3.6/index.html">increase_min_py_to_3.6</a>
-    </li><li>
-      <a href="branches/iosys-add-sub/index.html">iosys-add-sub</a>
-    </li><li>
-      <a href="branches/issue_535/index.html">issue_535</a>
-    </li><li>
-      <a href="branches/issue_562/index.html">issue_562</a>
-    </li><li>
-      <a href="branches/mpi_apply_inverse_adjoint/index.html">mpi_apply_inverse_adjoint</a>
-    </li><li>
-      <a href="branches/one-sided_IRKA/index.html">one-sided_IRKA</a>
-    </li><li>
-      <a href="branches/python_badges/index.html">python_badges</a>
-    </li><li>
-      <a href="branches/readme_update/index.html">readme_update</a>
-    </li><li>
-      <a href="branches/remove_broken_discs/index.html">remove_broken_discs</a>
-    </li><li>
-      <a href="branches/rule_table_36/index.html">rule_table_36</a>
-    </li><li>
-      <a href="branches/supporting_pep_0518/index.html">supporting_pep_0518</a>
-    </li><li>
-      <a href="branches/sys-attributes/index.html">sys-attributes</a>
-    </li><li>
-      <a href="branches/update_copyright_2019/index.html">update_copyright_2019</a>
+<ul><li><h2>wheel_building</h2>
+        <ul><li><a href="branches/wheel_building/pymor-0.5.0rc0+816.g8be3cb1-cp35-cp35m-manylinux1_x86_64.whl">pymor-0.5.0rc0+816.g8be3cb1-cp35-cp35m-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-0.5.0rc0+816.g8be3cb1-cp36-cp36m-manylinux1_x86_64.whl">pymor-0.5.0rc0+816.g8be3cb1-cp36-cp36m-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-0.5.0rc0+816.g8be3cb1.dirty-cp27-cp27mu-manylinux1_x86_64.whl">pymor-0.5.0rc0+816.g8be3cb1.dirty-cp27-cp27mu-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-wheel_building-latest-cp27-cp27mu-manylinux1_x86_64.whl">pymor-wheel_building-latest-cp27-cp27mu-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-wheel_building-latest-cp35-cp35m-manylinux1_x86_64.whl">pymor-wheel_building-latest-cp35-cp35m-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-wheel_building-latest-cp36-cp36m-manylinux1_x86_64.whl">pymor-wheel_building-latest-cp36-cp36m-manylinux1_x86_64.whl</a></li>
+        </ul>
     </li>
 </ul>
 
