--- a/index.html
+++ b/index.html
@@ -4,77 +4,14 @@
 <title>Path: branches</title>
 </head>
 <body>
-<h1>wheel_versioning</h1>
-<pre>
-to install latest:
-
-pip install --find-links=https://wheels.pymor.org/branches/wheel_versioning/index.html pymor
-
-</pre>
-<ul>
-    <li><a href="pymor-999!1+0.5.0rc0.1573.g5ae4bcf7-cp35-cp35m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1573.g5ae4bcf7-cp35-cp35m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.1630.g81986aa3-cp37-cp37m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1630.g81986aa3-cp37-cp37m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.1635.g34d2c54b-cp37-cp37m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1635.g34d2c54b-cp37-cp37m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.1643.gb6f9d0e4-cp37-cp37m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1643.gb6f9d0e4-cp37-cp37m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.1646.g38e693bf-cp37-cp37m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1646.g38e693bf-cp37-cp37m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.1663.gce23a968-cp36-cp36m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1663.gce23a968-cp36-cp36m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.1663.gce23a968-cp37-cp37m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1663.gce23a968-cp37-cp37m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.867.ge35d839-cp27-cp27mu-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.867.ge35d839-cp27-cp27mu-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.871.g90f1f90-cp27-cp27mu-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.871.g90f1f90-cp27-cp27mu-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.876.gbd00629-cp27-cp27mu-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.876.gbd00629-cp27-cp27mu-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.885.g049dfcc-cp27-cp27mu-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.885.g049dfcc-cp27-cp27mu-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.962.gd9bf945-cp35-cp35m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.962.gd9bf945-cp35-cp35m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.962.gd9bf945-cp36-cp36m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.962.gd9bf945-cp36-cp36m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.964.gf56228d-cp35-cp35m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.964.gf56228d-cp35-cp35m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.964.gf56228d-cp36-cp36m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.964.gf56228d-cp36-cp36m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.965.gb479fa3-cp35-cp35m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.965.gb479fa3-cp35-cp35m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.965.gb479fa3-cp36-cp36m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.965.gb479fa3-cp36-cp36m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.967.ged9711e-cp35-cp35m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.967.ged9711e-cp35-cp35m-manylinux1_x86_64.whl
-    </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.967.ged9711e-cp36-cp36m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.967.ged9711e-cp36-cp36m-manylinux1_x86_64.whl
-    </a></li>
+<h1>Master</h1>
+<ul><li><a href="pymor-0.5.0rc0+817.gf42c3e7-cp35-cp35m-manylinux1_x86_64.whl">pymor-0.5.0rc0+817.gf42c3e7-cp35-cp35m-manylinux1_x86_64.whl</a></li><li><a href="pymor-0.5.0rc0+817.gf42c3e7-cp36-cp36m-manylinux1_x86_64.whl">pymor-0.5.0rc0+817.gf42c3e7-cp36-cp36m-manylinux1_x86_64.whl</a></li><li><a href="pymor-0.5.0rc0+817.gf42c3e7.dirty-cp27-cp27mu-manylinux1_x86_64.whl">pymor-0.5.0rc0+817.gf42c3e7.dirty-cp27-cp27mu-manylinux1_x86_64.whl</a></li><li><a href="pymor-master-latest-9999.9.rc0-cp27-cp27mu-manylinux1_x86_64.whl">pymor-master-latest-9999.9.rc0-cp27-cp27mu-manylinux1_x86_64.whl</a></li><li><a href="pymor-master-latest-9999.9.rc0-cp35-cp35m-manylinux1_x86_64.whl">pymor-master-latest-9999.9.rc0-cp35-cp35m-manylinux1_x86_64.whl</a></li><li><a href="pymor-master-latest-9999.9.rc0-cp36-cp36m-manylinux1_x86_64.whl">pymor-master-latest-9999.9.rc0-cp36-cp36m-manylinux1_x86_64.whl</a></li>
 </ul>
 
 
 <h1>Branches</h1>
 <ul><li><h2>wheel_building</h2>
-        <ul><li><a href="branches/wheel_building/pymor-0.5.0rc0+816.g8be3cb1-cp35-cp35m-manylinux1_x86_64.whl">pymor-0.5.0rc0+816.g8be3cb1-cp35-cp35m-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-0.5.0rc0+816.g8be3cb1-cp36-cp36m-manylinux1_x86_64.whl">pymor-0.5.0rc0+816.g8be3cb1-cp36-cp36m-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-0.5.0rc0+816.g8be3cb1.dirty-cp27-cp27mu-manylinux1_x86_64.whl">pymor-0.5.0rc0+816.g8be3cb1.dirty-cp27-cp27mu-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-wheel_building-latest-cp27-cp27mu-manylinux1_x86_64.whl">pymor-wheel_building-latest-cp27-cp27mu-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-wheel_building-latest-cp35-cp35m-manylinux1_x86_64.whl">pymor-wheel_building-latest-cp35-cp35m-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-wheel_building-latest-cp36-cp36m-manylinux1_x86_64.whl">pymor-wheel_building-latest-cp36-cp36m-manylinux1_x86_64.whl</a></li>
+        <ul><li><a href="branches/wheel_building/pymor-0.5.0rc0+816.g8be3cb1-cp35-cp35m-manylinux1_x86_64.whl">pymor-0.5.0rc0+816.g8be3cb1-cp35-cp35m-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-0.5.0rc0+816.g8be3cb1-cp36-cp36m-manylinux1_x86_64.whl">pymor-0.5.0rc0+816.g8be3cb1-cp36-cp36m-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-0.5.0rc0+816.g8be3cb1.dirty-cp27-cp27mu-manylinux1_x86_64.whl">pymor-0.5.0rc0+816.g8be3cb1.dirty-cp27-cp27mu-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-wheel_building-latest-9999.9.rc0-cp27-cp27mu-manylinux1_x86_64.whl">pymor-wheel_building-latest-9999.9.rc0-cp27-cp27mu-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-wheel_building-latest-9999.9.rc0-cp35-cp35m-manylinux1_x86_64.whl">pymor-wheel_building-latest-9999.9.rc0-cp35-cp35m-manylinux1_x86_64.whl</a></li><li><a href="branches/wheel_building/pymor-wheel_building-latest-9999.9.rc0-cp36-cp36m-manylinux1_x86_64.whl">pymor-wheel_building-latest-9999.9.rc0-cp36-cp36m-manylinux1_x86_64.whl</a></li>
         </ul>
     </li>
 </ul>
