rewire index gen for branches
also pathlib ftw

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <title>pyMOR Wheels</title>
 </head>
 <body>
-<h1>Master</h1>
+<h1>master</h1>
+<pre>
+to install latest:
+
+pip install --find-links=https://wheels.pymor.org/ pymor
+
+</pre>
 <ul>
     <li><a href="pymor-0.5.0rc0+817.gf42c3e7-cp35-cp35m-manylinux1_x86_64.whl">
         pymor-0.5.0rc0+817.gf42c3e7-cp35-cp35m-manylinux1_x86_64.whl
@@ -15,40 +21,43 @@
     <li><a href="pymor-0.5.0rc0+817.gf42c3e7.dirty-cp27-cp27mu-manylinux1_x86_64.whl">
         pymor-0.5.0rc0+817.gf42c3e7.dirty-cp27-cp27mu-manylinux1_x86_64.whl
     </a></li>
-    <li><a href="pymor-master-latest-9999.9.rc0-cp27-cp27mu-manylinux1_x86_64.whl">
-        pymor-master-latest-9999.9.rc0-cp27-cp27mu-manylinux1_x86_64.whl
+    <li><a href="pymor-0.5.0rc0+852.g37bcbfe-cp35-cp35m-manylinux1_x86_64.whl">
+        pymor-0.5.0rc0+852.g37bcbfe-cp35-cp35m-manylinux1_x86_64.whl
     </a></li>
-    <li><a href="pymor-master-latest-9999.9.rc0-cp35-cp35m-manylinux1_x86_64.whl">
-        pymor-master-latest-9999.9.rc0-cp35-cp35m-manylinux1_x86_64.whl
+    <li><a href="pymor-0.5.0rc0+852.g37bcbfe-cp36-cp36m-manylinux1_x86_64.whl">
+        pymor-0.5.0rc0+852.g37bcbfe-cp36-cp36m-manylinux1_x86_64.whl
     </a></li>
-    <li><a href="pymor-master-latest-9999.9.rc0-cp36-cp36m-manylinux1_x86_64.whl">
-        pymor-master-latest-9999.9.rc0-cp36-cp36m-manylinux1_x86_64.whl
+    <li><a href="pymor-0.5.0rc0+852.g37bcbfe.dirty-cp27-cp27mu-manylinux1_x86_64.whl">
+        pymor-0.5.0rc0+852.g37bcbfe.dirty-cp27-cp27mu-manylinux1_x86_64.whl
+    </a></li>
+    <li><a href="pymor-0.5.0rc0+852.g80f412d-cp35-cp35m-manylinux1_x86_64.whl">
+        pymor-0.5.0rc0+852.g80f412d-cp35-cp35m-manylinux1_x86_64.whl
+    </a></li>
+    <li><a href="pymor-0.5.0rc0+852.g80f412d-cp36-cp36m-manylinux1_x86_64.whl">
+        pymor-0.5.0rc0+852.g80f412d-cp36-cp36m-manylinux1_x86_64.whl
+    </a></li>
+    <li><a href="pymor-0.5.0rc0+852.g80f412d.dirty-cp27-cp27mu-manylinux1_x86_64.whl">
+        pymor-0.5.0rc0+852.g80f412d.dirty-cp27-cp27mu-manylinux1_x86_64.whl
+    </a></li>
+    <li><a href="pymor-0.5.0rc0+853.gec9aa74-cp35-cp35m-manylinux1_x86_64.whl">
+        pymor-0.5.0rc0+853.gec9aa74-cp35-cp35m-manylinux1_x86_64.whl
+    </a></li>
+    <li><a href="pymor-0.5.0rc0+853.gec9aa74-cp36-cp36m-manylinux1_x86_64.whl">
+        pymor-0.5.0rc0+853.gec9aa74-cp36-cp36m-manylinux1_x86_64.whl
+    </a></li>
+    <li><a href="pymor-0.5.0rc0+853.gec9aa74.dirty-cp27-cp27mu-manylinux1_x86_64.whl">
+        pymor-0.5.0rc0+853.gec9aa74.dirty-cp27-cp27mu-manylinux1_x86_64.whl
     </a></li>
 </ul>
 
 
 <h1>Branches</h1>
-<ul><li><h2>wheel_building</h2>
-        <ul>
-            <li><a href="branches/wheel_building/pymor-0.5.0rc0+816.g8be3cb1-cp35-cp35m-manylinux1_x86_64.whl">
-                pymor-0.5.0rc0+816.g8be3cb1-cp35-cp35m-manylinux1_x86_64.whl
-            </a></li>
-            <li><a href="branches/wheel_building/pymor-0.5.0rc0+816.g8be3cb1-cp36-cp36m-manylinux1_x86_64.whl">
-                pymor-0.5.0rc0+816.g8be3cb1-cp36-cp36m-manylinux1_x86_64.whl
-            </a></li>
-            <li><a href="branches/wheel_building/pymor-0.5.0rc0+816.g8be3cb1.dirty-cp27-cp27mu-manylinux1_x86_64.whl">
-                pymor-0.5.0rc0+816.g8be3cb1.dirty-cp27-cp27mu-manylinux1_x86_64.whl
-            </a></li>
-            <li><a href="branches/wheel_building/pymor-wheel_building-latest-9999.9.rc0-cp27-cp27mu-manylinux1_x86_64.whl">
-                pymor-wheel_building-latest-9999.9.rc0-cp27-cp27mu-manylinux1_x86_64.whl
-            </a></li>
-            <li><a href="branches/wheel_building/pymor-wheel_building-latest-9999.9.rc0-cp35-cp35m-manylinux1_x86_64.whl">
-                pymor-wheel_building-latest-9999.9.rc0-cp35-cp35m-manylinux1_x86_64.whl
-            </a></li>
-            <li><a href="branches/wheel_building/pymor-wheel_building-latest-9999.9.rc0-cp36-cp36m-manylinux1_x86_64.whl">
-                pymor-wheel_building-latest-9999.9.rc0-cp36-cp36m-manylinux1_x86_64.whl
-            </a></li>
-        </ul>
+<ul><li>
+      <a href="branches/wheel_versioning/index.html">wheel_versioning</a>
+    </li><li>
+      <a href="branches/supporting_pep_0518/index.html">supporting_pep_0518</a>
+    </li><li>
+      <a href="branches/wheel_building/index.html">wheel_building</a>
     </li>
 </ul>
 
