--- a/index.html
+++ b/index.html
@@ -12,23 +12,26 @@ pip install --find-links=https://wheels.pymor.org/index.html pymor
 
 </pre>
 <ul>
-    <li><a href="pymor-999!1+0.5.0rc0.1538.g39703e64-cp37-cp37m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1538.g39703e64-cp37-cp37m-manylinux1_x86_64.whl
+    <li><a href="pymor-999!1+0.5.0rc0.1573.g5ae4bcf7-cp35-cp35m-manylinux1_x86_64.whl">
+        pymor-999!1+0.5.0rc0.1573.g5ae4bcf7-cp35-cp35m-manylinux1_x86_64.whl
     </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.1540.g2b312ddd-cp37-cp37m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1540.g2b312ddd-cp37-cp37m-manylinux1_x86_64.whl
+    <li><a href="pymor-999!1+0.5.0rc0.1630.g81986aa3-cp37-cp37m-manylinux1_x86_64.whl">
+        pymor-999!1+0.5.0rc0.1630.g81986aa3-cp37-cp37m-manylinux1_x86_64.whl
     </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.1558.g4b2fa82b-cp37-cp37m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1558.g4b2fa82b-cp37-cp37m-manylinux1_x86_64.whl
+    <li><a href="pymor-999!1+0.5.0rc0.1635.g34d2c54b-cp37-cp37m-manylinux1_x86_64.whl">
+        pymor-999!1+0.5.0rc0.1635.g34d2c54b-cp37-cp37m-manylinux1_x86_64.whl
     </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.1559.g8e9db080-cp35-cp35m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1559.g8e9db080-cp35-cp35m-manylinux1_x86_64.whl
+    <li><a href="pymor-999!1+0.5.0rc0.1643.gb6f9d0e4-cp37-cp37m-manylinux1_x86_64.whl">
+        pymor-999!1+0.5.0rc0.1643.gb6f9d0e4-cp37-cp37m-manylinux1_x86_64.whl
     </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.1559.g8e9db080-cp36-cp36m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1559.g8e9db080-cp36-cp36m-manylinux1_x86_64.whl
+    <li><a href="pymor-999!1+0.5.0rc0.1646.g38e693bf-cp37-cp37m-manylinux1_x86_64.whl">
+        pymor-999!1+0.5.0rc0.1646.g38e693bf-cp37-cp37m-manylinux1_x86_64.whl
     </a></li>
-    <li><a href="pymor-999!1+0.5.0rc0.1559.g8e9db080-cp37-cp37m-manylinux1_x86_64.whl">
-        pymor-999!1+0.5.0rc0.1559.g8e9db080-cp37-cp37m-manylinux1_x86_64.whl
+    <li><a href="pymor-999!1+0.5.0rc0.1663.gce23a968-cp36-cp36m-manylinux1_x86_64.whl">
+        pymor-999!1+0.5.0rc0.1663.gce23a968-cp36-cp36m-manylinux1_x86_64.whl
+    </a></li>
+    <li><a href="pymor-999!1+0.5.0rc0.1663.gce23a968-cp37-cp37m-manylinux1_x86_64.whl">
+        pymor-999!1+0.5.0rc0.1663.gce23a968-cp37-cp37m-manylinux1_x86_64.whl
     </a></li>
     <li><a href="pymor-999!1+0.5.0rc0.867.ge35d839-cp27-cp27mu-manylinux1_x86_64.whl">
         pymor-999!1+0.5.0rc0.867.ge35d839-cp27-cp27mu-manylinux1_x86_64.whl
@@ -73,15 +76,9 @@ pip install --find-links=https://wheels.pymor.org/index.html pymor
 <ul><li>
       <a href="branches/0.5.x/index.html">0.5.x</a>
     </li><li>
-      <a href="branches/DBG_deploy_check/index.html">DBG_deploy_check</a>
-    </li><li>
-      <a href="branches/drone.io/index.html">drone.io</a>
-    </li><li>
-      <a href="branches/fix_demos/index.html">fix_demos</a>
+      <a href="branches/f-string-examples/index.html">f-string-examples</a>
     </li><li>
       <a href="branches/improved_workerpool/index.html">improved_workerpool</a>
-    </li><li>
-      <a href="branches/readme_update/index.html">readme_update</a>
     </li>
 </ul>
 
